[54] fixed the spacing in the profile picture area

--- a/src/styling/Profile.css
+++ b/src/styling/Profile.css
@@ -64,6 +64,8 @@
 }
 .prof-profile-info {
   padding-left: 50px; 
+  max-width: 650px; 
+  min-width: 650px; 
 
 }
 
@@ -73,8 +75,9 @@
 .prof-edit-profile {
   
   align-self: flex-end ; 
-  margin-left: 600px;
   margin-bottom: 10px; 
+  max-width: 150px; 
+  min-width: 150px; 
 
 }
 
